/**
 * @file BaseModeControlSystem.hpp
 * @author David Gitz (davidgitz@gmail.com)
 * @brief
 * @version 0.1
 *
 * @copyright Copyright (c) 2026
 *
 */
#pragma once
#include <IModeControlSystem.hpp>

namespace fast::rf::ModeControlSystem {
/**
 * @brief Base Class for the ModeControl System
 *
 */
class BaseModeControlSystem : public IModeControlSystem {
   public:
};
}  // namespace fast::rf::ModeControlSystem