/**
 * @file DummyModeControlSystem.hpp
 * @author David Gitz (davidgitz@gmail.com)
 * @brief
 * @version 0.1
 *
 * @copyright Copyright (c) 2026
 *
 */
#pragma once

#include <BaseModeControlSystem.hpp>

namespace fast::rf::ModeControlSystem {
/**
 * @brief Dummy ModeControl System
 *
 */
class DummyModeControlSystem : public BaseModeControlSystem {
   public:
};
}  // namespace fast::rf::ModeControlSystem