@startuml
title System-ModeControl Package Diagram

namespace fast::rf {
  namespace messages {}
  package ModeControlSystem #LightYellow;line:blue {
    interface IModeControlSystem {
    }
    abstract BaseModeControlSystem {
    }
    IModeControlSystem <|-- BaseModeControlSystem
    class BasicModeControlSystem {

    }
    BaseModeControlSystem <|-- BasicModeControlSystem
    class DummyModeControlSystem  {
    }
    BaseModeControlSystem <|-- DummyModeControlSystem
  }
}
@enduml